add blog page; add article page;

--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -36,7 +36,7 @@
         li.menu-item
             a(href="#") Галерея
         li.menu-item
-            a(href="#") Блог
+            a(href="blog.html") Блог
     //MOBILE LANG
     .mobile-menu__lang
         a.mobile-menu__link.link--active(href="#") UA
