--- a/app/pug/object-opened.pug
+++ b/app/pug/object-opened.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="description" content="Starter")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Angro
+        title Объекты
         link(rel="icon" href="images/favicon.png")
         <!--build:css css/styles.min.css-->
         link(rel="stylesheet" href="css/libs/aos.css")
@@ -149,7 +149,7 @@ html(lang="en")
                                 
                         .item__icon
                             svg
-                                use(xlink:href="images/main-page_icons-sprite.svg#apartament")
+                                use(xlink:href="images/main-page_icons-sprite.svg#resort")
                             .icon-text
                                 p.icon-text__headline курорт
                                 p Курорт 1000м от дома
@@ -203,6 +203,7 @@ html(lang="en")
         //FOOTER END
         <!-- modal -->
         include object/object-modal.pug
+        include layout/modal.pug
         <!-- modal end-->                  
         
         <!--build:js js/main.min.js -->
