--- a/app/pug/object.pug
+++ b/app/pug/object.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="description" content="Starter")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Angro
+        title Объекты
         link(rel="icon" href="images/favicon.png")
         <!--build:css css/styles.min.css-->
         link(rel="stylesheet" href="css/libs/aos.css")
@@ -34,7 +34,7 @@ html(lang="en")
                             svg.mobile-logo__icon
                                 use(xlink:href="images/main-page_icons-sprite.svg#logo")
                     //MOBILE LOGO END
-                    h2.title объекты
+                    h2.title Объекты
                     h3.headline Город местонахождения строительства
         //HEADER END
 
@@ -222,6 +222,7 @@ html(lang="en")
         //FOOTER END
         <!-- modal -->
         include object/object-modal.pug
+        include layout/modal.pug
         <!-- modal end-->                  
         
         <!--build:js js/main.min.js -->
