--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -24,3 +24,5 @@
 @import "modules/_page-object__info";
 @import "modules/_page-object__modal";
 @import "modules/_page-object-opened";
+@import "modules/_page-blog";
+@import "modules/_page-article";
