--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -30,7 +30,7 @@
     <li class="menu-item"><a href="object.html">Объекты</a></li>
     <li class="menu-item"><a href="#">Квартиры</a></li>
     <li class="menu-item"><a href="#">Галерея</a></li>
-    <li class="menu-item"><a href="#">Блог</a></li>
+    <li class="menu-item"><a href="blog.html">Блог</a></li>
   </ul>
   <!--MOBILE LANG-->
   <div class="mobile-menu__lang"><a class="mobile-menu__link link--active" href="#">UA</a><a class="mobile-menu__link" href="#">RU</a></div>
