--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -222,6 +222,7 @@ section {
     background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
     @media (max-width: 576px) {
         padding: 40px 0;
+        background: #E5E5E5;
     }
     @media (max-width: 812px) and (orientation: landscape) {
         padding: 40px 0;
