--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -5,7 +5,8 @@
     overflow: hidden;
     @media (max-width: 576px) {
         padding: 30px 0 50px 0;
-        background: #FFFFFF;
+        //background: #FFFFFF;
+        background: #E5E5E5;
     }
     @media (max-width: 812px) and (orientation: landscape) {
         padding: 30px 0 50px 0;
@@ -14,6 +15,10 @@
         color: #0D0D0D;
         //font-size: 1.1rem;
         line-height: 1.75rem;
+        &:hover {
+            color: #828282;
+            text-decoration: underline;
+        }
     }
     &-address {
         grid-column: 1 / 5;
@@ -69,7 +74,7 @@
         }
         &:hover {
             svg {
-                fill: $button-default-color;
+                fill: #828282;
             }
         }
         @media (max-width: 576px) {
@@ -211,7 +216,7 @@
         &__link {
             &:hover {
                 svg {
-                    fill: #FFF3A6;
+                    fill: #828282;
                 }
             }
         }
