--- a/app/scss/modules/_page-object.scss
+++ b/app/scss/modules/_page-object.scss
@@ -1,7 +1,7 @@
 .object-body {
     .mobile-menu {
-        top: 60px;
-        left: 20px;
+        // top: 60px;
+        // left: 20px;
         &__icon {
             background: #423C3A;
             &:before,
@@ -20,10 +20,11 @@
 }
 
 .object-header {
-    background: rgba(229, 229, 229, .5);
+    background: #F5F5F4;
     padding: 0 0 30px 0;
     @media (max-width: 768px) {
-        background: #FFFFFF;
+        //background: #FFFFFF;
+        background: #F5F5F4;
     }
     .mobile-logo {
         top: 100px;
@@ -43,6 +44,7 @@
         @media (min-width: 1200px) {
             font-size: 64px;
             line-height: 78px;
+            margin: 60px 0 20px;
         }
     }
     .headline {
