--- a/app/scss/modules/_section-objects.scss
+++ b/app/scss/modules/_section-objects.scss
@@ -61,6 +61,7 @@
         margin: 0 0 50px 0;
         grid-column: 1/7;
         grid-row: 4/5;
+        font-family: Bellota Text;
         @media (max-width: 576px) {
             grid-column: 1/13;
             grid-row: 5/6;
