add page gallery; add page gallery-opened;

--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -34,7 +34,7 @@
         li.menu-item
             a(href="#") Квартиры
         li.menu-item
-            a(href="#") Галерея
+            a(href="gallery.html") Галерея
         li.menu-item
             a(href="blog.html") Блог
     //MOBILE LANG
