--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -26,3 +26,5 @@
 @import "modules/_page-object-opened";
 @import "modules/_page-blog";
 @import "modules/_page-article";
+@import "modules/_page-gallery";
+@import "modules/_page-gallery-opened";
