--- a/app/scss/modules/_page-article.scss
+++ b/app/scss/modules/_page-article.scss
@@ -49,6 +49,9 @@
             padding: 0 25px;
         }
     }
+    .price {
+        margin: 0 25px;
+    }
     .text__main {
         margin: 15px 0;
         padding: 0 25px;
