--- a/app/pug/object.pug
+++ b/app/pug/object.pug
@@ -228,6 +228,7 @@ html(lang="en")
         <!--build:js js/main.min.js -->
         script(src="js/libs/jquery.min.js")
         script(src="js/libs/jquery-ui.js")
+        script(src="js/libs/lightgallery.js")
         script(src="js/libs/aos.js")
         script(src="js/libs/slick.min.js")
         script(src="js/main.js")
