--- a/app/scss/modules/_page-gallery-opened.scss
+++ b/app/scss/modules/_page-gallery-opened.scss
@@ -106,6 +106,8 @@
     transition: all .3s;
     position: relative;
     margin: 20px;
+    width: 40px !important;
+    height: 40px !important;
     @media (min-width: 1025px) {
         width: 75px !important;
         height: 75px !important;
