add apartments page;

--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -47,7 +47,7 @@ html(lang="en")
                             p.logo__text жилой комплекс
                             h2.logo__title На Сенной
                             h4.logo__headline Полтава ул. Сенная, 19
-                            a(href).link Смотреть фото 
+                            a(href="gallery-opened.html").link Смотреть фото 
                     .picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
@@ -62,7 +62,7 @@ html(lang="en")
                             p.logo__text жилой комплекс
                             h2.logo__title Остров
                             h4.logo__headline Миргород ул. Гоголя, 77
-                            a(href).link Смотреть фото 
+                            a(href="gallery-opened.html").link Смотреть фото 
                     .picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
@@ -77,7 +77,7 @@ html(lang="en")
                             p.logo__text жилой комплекс
                             h2.logo__title Мирного
                             h4.logo__headline Миргород ул. Панаса Мирного, 3
-                            a(href).link Смотреть фото 
+                            a(href="gallery-opened.html").link Смотреть фото 
                     .picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
@@ -92,7 +92,7 @@ html(lang="en")
                             p.logo__text жилой комплекс
                             h2.logo__title Победы
                             h4.logo__headline Миргород ул. Победы, 10
-                            a(href).link Смотреть фото 
+                            a(href="gallery-opened.html").link Смотреть фото 
                     .picture
                         img(src="images/objects/object_img1.jpg", alt="ЖК 'На Сенной'")
                         .picture__icon-wrap
