--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -2,7 +2,7 @@
 .sidebar
     .sidebar-content
         // LOGO START  
-        a(href="#").sidebar-logo              
+        a(href="index.html").sidebar-logo              
             svg.sidebar-logo__icon
                 use(xlink:href="images/main-page_icons-sprite.svg#logo")
         // LOGO END 
@@ -32,7 +32,7 @@
         li.menu-item
             a(href="object.html") Объекты
         li.menu-item
-            a(href="#") Квартиры
+            a(href="apartments.html") Квартиры
         li.menu-item
             a(href="gallery.html") Галерея
         li.menu-item
