--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -28,3 +28,4 @@
 @import "modules/_page-article";
 @import "modules/_page-gallery";
 @import "modules/_page-gallery-opened";
+@import "modules/_page-apartments";
