fix for article page;

--- a/app/pug/apartments.pug
+++ b/app/pug/apartments.pug
@@ -36,21 +36,17 @@ html(lang="en")
                     //MOBILE LOGO END
                     h2.title Квартиры
                     h3.headline Квартиры строительства angro
-                    a.arrow-btn.arrow-btn--left(href="#")
-                        .arrow-btn__icon
-                            svg.icon
-                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
-                        p.arrow-btn__text Объекты
+                    //- a.arrow-btn.arrow-btn--left(href="#")
+                    //-     .arrow-btn__icon
+                    //-         svg.icon
+                    //-             use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                    //-     p.arrow-btn__text Объекты
         //HEADER END
         //CONTENT START
         section.apartments-content
             .container
                 iframe(src="", frameborder="0", onload="create_chess('P3XQb0g7V0zAg1G');return false;") ЖК Первый
              
-
-
-
-        
         //CONTENT END
         //FOOTER START
         footer.footer
