--- a/app/pug/blog.pug
+++ b/app/pug/blog.pug
@@ -66,28 +66,35 @@ html(lang="en")
                             .date 01.04.2020 г.
                             .information__headline Стоимость 1 кв.м в ЖК Остров с 01.04.2020
                             .text Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
-                            .price
-                                p Вид квартиры
-                                p Этаж 
-                                p Стоимость 1 кв.м
-                                p Однокомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Двухкомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Однокомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Двухкомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Трехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
-                                p Четырехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
+                            table.price
+                                tr
+                                    th Вид квартиры
+                                    th Этаж 
+                                    th Стоимость 1 кв.м
+                                tr
+                                    td Однокомнатная
+                                    td 2,7,8
+                                    td 11500,00 грн
+                                tr
+                                    td Двухкомнатная
+                                    td 2,7,8
+                                    td 11500,00 грн
+                                tr
+                                    td Однокомнатная
+                                    td 3-6
+                                    td 12000,00 грн
+                                tr
+                                    td Двухкомнатная
+                                    td 3-6
+                                    td 12000,00 грн
+                                tr
+                                    td Трехкомнатная
+                                    td 9-9+
+                                    td 10000,00 грн
+                                tr
+                                    td Четырехкомнатная
+                                    td 9-9+
+                                    td 10000,00 грн
                         .photo
                             img(src="images/objects/object_img4.jpg", alt="ЖК 'На Сенной'").img
                         .information__btn
@@ -102,28 +109,35 @@ html(lang="en")
                             .date 16.10.2019 г.
                             .information__headline Стоимость 1 кв.м в ЖК Остров (ноябрь 2019)
                             .text Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 ноября 2019 года
-                            .price
-                                p Вид квартиры
-                                p Этаж 
-                                p Стоимость 1 кв.м
-                                p Однокомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Двухкомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Однокомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Двухкомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Трехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
-                                p Четырехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
+                            table.price
+                                tr
+                                    th Вид квартиры
+                                    th Этаж 
+                                    th Стоимость 1 кв.м
+                                tr
+                                    td Однокомнатная
+                                    td 2,7,8
+                                    td 11500,00 грн
+                                tr
+                                    td Двухкомнатная
+                                    td 2,7,8
+                                    td 11500,00 грн
+                                tr
+                                    td Однокомнатная
+                                    td 3-6
+                                    td 12000,00 грн
+                                tr
+                                    td Двухкомнатная
+                                    td 3-6
+                                    td 12000,00 грн
+                                tr
+                                    td Трехкомнатная
+                                    td 9-9+
+                                    td 10000,00 грн
+                                tr
+                                    td Четырехкомнатная
+                                    td 9-9+
+                                    td 10000,00 грн
                         .photo
                             img(src="images/objects/object_img4.jpg", alt="ЖК 'На Сенной'").img
                         .information__btn
@@ -153,28 +167,35 @@ html(lang="en")
                             .date 03.12.2018 г.
                             .information__headline Стоимость 1 кв.м в ЖК Остров (декабрь 2018)
                             .text Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 10 декабря 2018 года
-                            .price
-                                p Вид квартиры
-                                p Этаж 
-                                p Стоимость 1 кв.м
-                                p Однокомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Двухкомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Однокомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Двухкомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Трехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
-                                p Четырехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
+                            table.price
+                                tr
+                                    th Вид квартиры
+                                    th Этаж 
+                                    th Стоимость 1 кв.м
+                                tr
+                                    td Однокомнатная
+                                    td 2,7,8
+                                    td 11500,00 грн
+                                tr
+                                    td Двухкомнатная
+                                    td 2,7,8
+                                    td 11500,00 грн
+                                tr
+                                    td Однокомнатная
+                                    td 3-6
+                                    td 12000,00 грн
+                                tr
+                                    td Двухкомнатная
+                                    td 3-6
+                                    td 12000,00 грн
+                                tr
+                                    td Трехкомнатная
+                                    td 9-9+
+                                    td 10000,00 грн
+                                tr
+                                    td Четырехкомнатная
+                                    td 9-9+
+                                    td 10000,00 грн
                         .photo
                             img(src="images/objects/object_img4.jpg", alt="ЖК 'На Сенной'").img
                         .information__btn
