--- a/app/pug/gallery-opened.pug
+++ b/app/pug/gallery-opened.pug
@@ -26,7 +26,7 @@ html(lang="en")
         //SIDEBAR END
 
         //HEADER START 
-        header.gallery-opened-header
+        header.gallery-header
             .container
                 .grid
                     //MOBILE LOGO
