--- a/app/pug/layout/section-apartments.pug
+++ b/app/pug/layout/section-apartments.pug
@@ -7,7 +7,7 @@
             .arrow-btn__icon
                 svg.icon
                     use(xlink:href="images/main-page_icons-sprite.svg#arrow")
-            p.arrow-btn__text Посмотреть квартиры объекта
+            p.arrow-btn__text Выбрать квартиру 
 //SLIDER BUTTON START
 svg.apartments-slider__prevbtn
     use(xlink:href="images/main-page_icons-sprite.svg#arrow") 
