--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -195,6 +195,7 @@
         }
         height: 4rem;
         align-self: flex-end;
-        text-transform: uppercase;
+        padding: 0 1rem;
+        //text-transform: uppercase;
     }
 }
