--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="grid">
     <div class="footer-address">
-      <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
+      <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="https://goo.gl/maps/uvTuZejuJ91FQi488">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="https://goo.gl/maps/A4DGXzHAsAgAp9nc7">г.Миргород, ул.Победы,10, оф.1</a>
+      <p>Время работы: 9:00 – 18:00</p>
     </div>
     <div class="footer-logo"><a class="link" href="#"> 
         <svg>
@@ -47,6 +48,6 @@
             </svg>
           </div></a></div>
     </div>
-    <p class="footer-copyright">© 2020. www.angro.com.ua</p>
+    <p class="footer-copyright">© 2020. <a class="footer-link" href="www.angro.com.ua">www.angro.com.ua</a></p>
   </div>
 </div>
