--- a/app/layout/section-apartments.html
+++ b/app/layout/section-apartments.html
@@ -10,7 +10,7 @@
           <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
         </svg>
       </div>
-      <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a>
+      <p class="arrow-btn__text">Выбрать квартиру </p></a>
   </div>
 </div>
 <!--SLIDER BUTTON START-->
