--- a/app/layout/section-articles.html
+++ b/app/layout/section-articles.html
@@ -54,7 +54,7 @@
             <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
           </svg>
         </div>
-        <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a>
+        <p class="arrow-btn__text">Посмотреть все Статьи</p></a>
     </div>
   </div>
 </div>
