--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -12,13 +12,13 @@
     <div class="sidebar-menu">
       <div class="sidebar-menu__triger">Меню</div>
     </div>
-    <div class="sidebar-icons"><a class="sidebar-icons__item" href="#">
+    <div class="sidebar-icons"><a class="sidebar-icons__item" href="apartments.html">
         <svg class="sidebar-icons__icon">
           <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
-        </svg></a><a class="sidebar-icons__item" href="#">
+        </svg></a><a class="sidebar-icons__item" href="tel:+380509915880">
         <svg class="sidebar-icons__icon icon--phone">
           <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
-        </svg></a><a class="sidebar-icons__item" href="#">
+        </svg></a><a class="sidebar-icons__item" href="mailto:angrobud@gmail.com">
         <svg class="sidebar-icons__icon icon--email">
           <use xlink:href="images/main-page_icons-sprite.svg#email"></use>
         </svg></a></div>
@@ -59,7 +59,7 @@
   </div>
   <ul class="menu-footer">
     <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
-    <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
+    <li class="menu-item"><a href="tel:+380509915880">+38 (050) 991 58 80</a></li>
     <li class="menu-item"><a class="link--email" href="mailto:angrobud@gmail.com">angrobud@gmail.com</a></li>
   </ul>
 </div>
