--- a/app/pug/arcticle.pug
+++ b/app/pug/arcticle.pug
@@ -46,52 +46,58 @@ html(lang="en")
         section.article-content
             .container
                 .information
-                    p.date 01.04.2020 г.
-                    p.information__headline Стоимость 1 кв.м в ЖК Остров с 01.04.2020
-                    .text
-                        img.float-right(src="images/article/article-image1.jpg", alt="ЖК 'На Сенной'").img
-                        p.text__headlide Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
-                            .price
-                                p Вид квартиры
-                                p Этаж 
-                                p Стоимость 1 кв.м
-                                p Однокомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Двухкомнатная
-                                p 2,7,8
-                                p 11500,00 грн
-                                p Однокомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Двухкомнатная
-                                p 3-6
-                                p 12000,00 грн
-                                p Трехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
-                                p Четырехкомнатная
-                                p 9-9+
-                                p 10000,00 грн
-                        .text__main 
-                            p Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. 
-                            p Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.
-                            p Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    
-                            img.float-left(src="images/article/article-image2.jpg", alt="ЖК 'На Сенной'").img
-                        
-                            p Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.
-                            ol
-                                li Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.
-                                li Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени
-                            p С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.
-                            img.float-right(src="images/article/article-image3.jpg", alt="ЖК 'На Сенной'").img
-                            ul
-                                li Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.
-                                li Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.
-                            p Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.
-                            p С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  
-                            p Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.
-                            p С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.
+                    h3.date 01.04.2020 г.
+                    h1.information__headline Стоимость 1 кв.м в ЖК Остров с 01.04.2020
+                    img.img.float-right(src="images/article/article-image1.jpg", alt="ЖК 'На Сенной'")
+                    h2.text__headlide Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
+                    table.price
+                        tr
+                            th Вид квартиры
+                            th Этаж 
+                            th Стоимость 1 кв.м
+                        tr
+                            td Однокомнатная
+                            td 2,7,8
+                            td 11500,00 грн
+                        tr
+                            td Двухкомнатная
+                            td 2,7,8
+                            td 11500,00 грн
+                        tr
+                            td Однокомнатная
+                            td 3-6
+                            td 12000,00 грн
+                        tr
+                            td Двухкомнатная
+                            td 3-6
+                            td 12000,00 грн
+                        tr
+                            td Трехкомнатная
+                            td 9-9+
+                            td 10000,00 грн
+                        tr
+                            td Четырехкомнатная
+                            td 9-9+
+                            td 10000,00 грн
+                    
+                    p Строительство жилых домов сопряжено со множеством проблем. Но если безопасность надземной части зданий связана с качеством материалов и человеческим фактором, то подземная их часть подвергается гораздо большему числу рисков. 
+                    p Просчитать и предвидеть их все не способен самый мощный компьютер. Поэтому проектирование фундаментов является, пожалуй, самым сложным и ответственным моментом в процессе строительства. От успешного проведения начального этапа работ зависит вся дальнейшая судьба дома и зданий, расположенных по соседству.
+                    p Застройщик Жилого комплекса «ОСТРОВ» с полной ответственностью подошел к вопросам проектирования и возведения жилого дома, а особенно к фундаменту, так как рассказы об особенностях строительства соседнего жилого дома по адресу ул. Гоголя, 47/2 ходят по Миргороду с момента возведения этого здания в 80-х годах прошлого века.    
+                    img.img.float-left(src="images/article/article-image2.jpg", alt="ЖК 'На Сенной'").img
+                
+                    p Для оценки фактической ситуации с почвой на месте планируемого строительства в апреле 2017 года были проведены инженерно-геологические изыскания Полтавским филиалом Украинского государственного главного научно-исследовательского и производственного института инженерно-технических и экологических изысканий (ПФ ДП «УКРНДІІНТВ») с бурением и изъятием образцов. По результатам были определены геологические условия на строительном участке.
+                    ol
+                        li Данные исследования стали основой для проекта фундаментов разработанного главным архитектором проекта Зайцем С.П., который соответствует всем строительным нормам и стандартам.
+                        li Строительство фундамента было поручено компании «Фундаментспецбуд» основанной в 1990 году. Начиная с этого времени
+                    p С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.
+                    img.img.float-right(src="images/article/article-image3.jpg", alt="ЖК 'На Сенной'").img
+                    ul
+                        li Сначала <strong>«Фундаментспецбуд»</strong> провел статические испытания почвы несколькими железобетонными сваями в разных местах строительного участка, которые подтвердили правильность расчетов и выполнил весь проект в полном объеме без отклонений.
+                        li Работая более 20-лет на строительном рынке, компания сформировала самодостаточную производственно техническую базу и накопила широкий производственный опыт. <strong>«Фундаментспецбуд»</strong> выполнил более 1000 проектов на территории Украины и за ее пределами.
+                    p Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.
+                    p С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.                  
+                    p Компания специализируется на возведении свайных фундаментов под крупные объекты в обычных и сложных инженерно геологических условиях. Жилой комплекс «Остров» возводится на надежном фундаменте, который обеспечит комфортную жизнь.
+                    p С техническим отчетом про несущую способность железобетонных свай по результатам испытаний на участке строительства по ул. Гоголя,77 в Миргороде, Полтавской области все желающие могут ознакомиться в отделе продаж по адресу ул. Победы, 10, оф.1, Миргород или скачав файл по ссылке.
                         
                 //- .information__btn
                 //-     a.arrow-btn.arrow-btn--left(href="arcticle.html")
