--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -16,7 +16,7 @@ html(lang="en")
         <!--[if lt IE 9]>
         script(src="http://html5shiv.googlecode.com/svn/trunk/html5.js")
         <![endif]-->
-    body.blog-body
+    body.gallery-body
         //INFO START 
         include object/object-info.pug
         //INFO END
@@ -25,7 +25,7 @@ html(lang="en")
         //SIDEBAR END
 
         //HEADER START 
-        header.blog-header
+        header.gallery-header
             .container
                 .grid
                     //MOBILE LOGO
