--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -2,9 +2,9 @@
     .grid
         .footer-address
             h5.footer-address__title Наши офисы
-            a(href="#").footer-link г.Полтава, ул. А.Кукоби, 12
-            a(href="#").footer-link г.Миргород, ул.Победы,10, оф.1
-            a(href="#").footer-link Время работы: 9:00 – 18:00
+            a(href="https://goo.gl/maps/uvTuZejuJ91FQi488").footer-link г.Полтава, ул. А.Кукоби, 12
+            a(href="https://goo.gl/maps/A4DGXzHAsAgAp9nc7").footer-link г.Миргород, ул.Победы,10, оф.1
+            p Время работы: 9:00 – 18:00
         
         .footer-logo
             a(href="#").link 
@@ -47,4 +47,5 @@
                     .svg-wrap
                         svg
                             use(xlink:href="images/main-page_icons-sprite.svg#insta icon")
-        p.footer-copyright © 2020. www.angro.com.ua
+        p.footer-copyright © 2020. 
+            a.footer-link(href="www.angro.com.ua") www.angro.com.ua
