--- a/app/pug/layout/section-articles.pug
+++ b/app/pug/layout/section-articles.pug
@@ -46,5 +46,5 @@
                 .arrow-btn__icon
                     svg.icon
                         use(xlink:href="images/main-page_icons-sprite.svg#arrow")
-                p.arrow-btn__text Посмотреть квартиры объекта
+                p.arrow-btn__text Посмотреть все Статьи
 //ARTICLES END
