--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -14,13 +14,13 @@
         .sidebar-menu
             .sidebar-menu__triger Меню
         .sidebar-icons
-            a.sidebar-icons__item(href="#")
+            a.sidebar-icons__item(href="apartments.html")
                 svg.sidebar-icons__icon
                     use(xlink:href="images/main-page_icons-sprite.svg#apartament")
-            a.sidebar-icons__item(href="#")
+            a.sidebar-icons__item(href="tel:+380509915880")
                 svg.sidebar-icons__icon.icon--phone
                     use(xlink:href="images/main-page_icons-sprite.svg#phone")
-            a.sidebar-icons__item(href="#")
+            a.sidebar-icons__item(href="mailto:angrobud@gmail.com")
                 svg.sidebar-icons__icon.icon--email
                     use(xlink:href="images/main-page_icons-sprite.svg#email")
 
@@ -65,7 +65,7 @@
         li.menu-item
             a.link--active(href="#") Выбрать квартиру
         li.menu-item
-            a(href="tel:+38(050)-991-58-80") +38 (050) 991 58 80
+            a(href="tel:+380509915880") +38 (050) 991 58 80
         li.menu-item
             a.link--email(href="mailto:angrobud@gmail.com") angrobud@gmail.com
     
