--- a/app/pug/object/object-modal.pug
+++ b/app/pug/object/object-modal.pug
@@ -4,28 +4,35 @@
             .date 01.04.2020 г.
             .information__headline Стоимость 1 кв.м в ЖК Остров с 01.04.2020
             .text Цены за квартиры в Жилом комплексе «Остров» по ул. Гоголя-77 на сайте указаны по состоянию на 01 апреля 2020 года
-            .price
-                p.price__head Вид квартиры
-                p.price__head Этаж 
-                p.price__head Стоимость 1 кв.м
-                p.price__item Однокомнатная
-                p.price__item 2,7,8
-                p.price__item 11500,00 грн
-                p.price__item Двухкомнатная
-                p.price__item 2,7,8
-                p.price__item 11500,00 грн
-                p.price__item Однокомнатная
-                p.price__item 3-6
-                p.price__item 12000,00 грн
-                p.price__item Двухкомнатная
-                p.price__item 3-6
-                p.price__item 12000,00 грн
-                p.price__item Трехкомнатная
-                p.price__item 9-9+
-                p.price__item 10000,00 грн
-                p.price__item Четырехкомнатная
-                p.price__item 9-9+
-                p.price__item 10000,00 грн
+            table.price
+                tr
+                    th Вид квартиры
+                    th Этаж 
+                    th Стоимость 1 кв.м
+                tr
+                    td Однокомнатная
+                    td 2,7,8
+                    td 11500,00 грн
+                tr
+                    td Двухкомнатная
+                    td 2,7,8
+                    td 11500,00 грн
+                tr
+                    td Однокомнатная
+                    td 3-6
+                    td 12000,00 грн
+                tr
+                    td Двухкомнатная
+                    td 3-6
+                    td 12000,00 грн
+                tr
+                    td Трехкомнатная
+                    td 9-9+
+                    td 10000,00 грн
+                tr
+                    td Четырехкомнатная
+                    td 9-9+
+                    td 10000,00 грн
         .photo
             img(src="images/objects/object_img4.jpg", alt="ЖК 'На Сенной'").img
         .object-modal__btn
