--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -49,7 +49,7 @@ button::-moz-focus-inner {
 }
 
 .container {
-    margin: 0 auto;
+    //margin: 0 auto;
     padding: 0 10px;
     max-width: 1250px;
     @media (max-width: 1366px) {
