--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -56,7 +56,7 @@ a {
 }
 
 .arrow-btn {
-    height: 77px;
+    height: 65px;
     display: flex;
     align-items: center;
     text-transform: uppercase;
@@ -89,16 +89,16 @@ a {
         position: relative;
         transition: all .3s;
         svg {
-            @include pos($t: -17px, $l: 30px);
+            @include pos($t: -16px, $l: 27px);
             transform: rotate(-90deg);
-            @include size(15px, 40px);
+            @include size(13px, 35px);
             z-index: 2;
             fill: #423C3A;
         }
         &:after {
             content: '';
-            @include pos($t: -37px, $l: 0);
-            @include size(75px);
+            @include pos($t: -32.5px, $l: 0);
+            @include size(65px);
             background: $button-default-color;
             border-radius: 50%;
             z-index: 1;
@@ -124,8 +124,8 @@ a {
                 }
             }
             .icon {
-                top: -20px;
-                left: 33px;
+                top: -17.5px;
+                left: 30px;
                 transform: rotate(-180deg);
                 @media (max-width: 576px) {
                     top: -10px;
@@ -147,7 +147,7 @@ a {
             svg {
                 @include size(8px, 16px);
                 top: -9px;
-                left: 17px;
+                left: 1px;
             }
             &:after {
                 @include size(40px);
@@ -218,8 +218,17 @@ a {
 
 section {
     overflow: hidden;
-    padding: 100px 0 100px 0;
-    background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
+    padding: 100px 0 100px 210px;
+    // &::before {
+    //     content: '';
+    //     display: block;
+    //     @include pos($t: 0, $l: 0);
+    //     position: relative;
+    //     width: 210px;
+    //     height: 100%;
+    // }
+    //background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
+    background: #f5f5f4;
     @media (max-width: 576px) {
         padding: 40px 0;
         background: #E5E5E5;
