--- a/app/scss/modules/_info.scss
+++ b/app/scss/modules/_info.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    @include size(33%, 7rem);
+    @include size(500px, 7rem);
     padding: 20px;
     @media (max-width: 576px) {
         display: none;
@@ -22,7 +22,7 @@
     &-block {
         width: 50%;
         min-width: 205px;
-        padding: .5rem;
+        margin: .5rem;
         cursor: pointer;
         font-size: 28px;
         text-decoration: none;
@@ -32,7 +32,7 @@
         align-items: center;
     }
     &-left {
-        padding: .8rem;
+        margin: .8rem;
         .info-text {
             font-size: 1.25rem;
             text-decoration: none;
@@ -64,6 +64,11 @@
         flex-direction: row;
         text-transform: uppercase;
         line-height: 1.3rem;
+        &:hover {
+            .info-icon {
+                fill: #FFF3A6;
+            }
+        }
         .info-icon {
             fill: $light-hover;
             @include size(65px, 50px);
