--- a/app/scss/modules/_page-article.scss
+++ b/app/scss/modules/_page-article.scss
@@ -37,58 +37,118 @@
     .container {
         padding: 0;
     }
-    .text {
-        padding: 0;
-    }
-    .text__headlide {
-        padding: 0 25px;
-        @media (min-width: 1025px) {
-            font-size: 24px;
-            line-height: 30px;
-            margin: 0 0 30px 0;
-            padding: 0 25px;
-        }
-    }
-    .price {
-        margin: 0 25px;
-    }
-    .text__main {
-        margin: 15px 0;
-        padding: 0 25px;
-        font-family: Bellota Text;
-        font-style: normal;
-        font-weight: normal;
+    .date {
         font-size: 16px;
         line-height: 20px;
+        padding: 0 25px;
         @media (min-width: 1025px) {
-            font-size: 22px;
-            line-height: 28px;
+            font-size: 19px;
+            line-height: 23px;
+            padding: 0;
         }
-        p {
+    }
+    .information {
+        &__headline {
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 29px;
+            padding: 0 25px;
+            @media (min-width: 1025px) {
+                font-size: 36px;
+                line-height: 44px;
+                padding: 0;
+            }
+        }
+        p,
+        ul,
+        ol {
+            argin: 15px 25px;
+            font-family: Bellota Text;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 20px;
+            //text-align: justify;
+            @media (min-width: 1025px) {
+                font-size: 22px;
+                line-height: 28px;
+                margin: 15px 0;
+            }
             &:after {
                 content: "";
                 display: table;
                 clear: both;
             }
         }
+        p {
+            padding: 0 25px;
+            @media (min-width: 1025px) {
+                padding: 0;
+            }
+        }
+    }
+    .text__headlide {
+        padding: 0 25px;
+        font-style: italic;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        @media (min-width: 1025px) {
+            font-family: Bellota Text;
+            font-style: italic;
+            font-weight: normal;
+            font-size: 24px;
+            line-height: 30px;
+            padding: 0;
+        }
+    }
+    .price {
+        font-size: 14px;
+        line-height: 26px;
+        color: #423C3A;
+        background: #FFFFFF;
+        overflow: hidden;
+        width: 100%;
+        @media (min-width: 1025px) {
+            //margin: 0 25px;
+            background: transparent;
+        }
+        tr {
+            display: grid;
+            grid-template-columns: 40% 20% 40%;
+            grid-gap: 2px;
+            margin: 0 0 2px;
+        }
+        th {
+            font-weight: bold;
+            font-size: 14px;
+            background: #FFF3A6;
+            text-align: left;
+            padding: 0 0 0 5px;
+        }
+        td {
+            margin: 0;
+            padding: 0 0 0 5px;
+            background: #FFF3A6;
+        }
     }
     img {
         width: 100%;
         margin: 0 0 1rem;
         @media (min-width: 1025px) {
-            width: 40%;
+            @include size(500px, auto);
         }
     }
     .float-left {
         @media (min-width: 1025px) {
             float: left;
-            margin: 60px 60px 60px 0;
+            margin: 40px 60px 40px 0;
         }
     }
     .float-right {
         @media (min-width: 1025px) {
             float: right;
-            margin: 60px 0 60px 60px;
+            margin: 40px 0 40px 60px;
         }
     }
     ol {
@@ -98,7 +158,7 @@
             text-decoration: underline;
         }
         li {
-            margin: 0 30px 1rem 40px;
+            margin: 0 30px 1rem 60px;
             position: relative;
             list-style-type: none;
             @media (min-width: 1025px) {
@@ -109,9 +169,6 @@
                 @include pos($t: 3px, $l: -24px);
                 counter-increment: list;
                 content: counter(list) "";
-                // @include size(20px);
-                // background: #423C3A;
-                //border-radius: 50%;
                 color: #FFF3A6;
                 z-index: 2;
                 @media (min-width: 1025px) {
@@ -140,7 +197,7 @@
             text-decoration: underline;
         }
         li {
-            margin: 0 30px 1rem 40px;
+            margin: 0 30px 1rem 60px;
             position: relative;
             list-style-type: none;
             @media (min-width: 1025px) {
