--- a/app/scss/modules/_page-gallery-opened.scss
+++ b/app/scss/modules/_page-gallery-opened.scss
@@ -1,36 +1,38 @@
-.gallery-opened-header {
-    background: #F5F5F4;
-    padding: 0 0 30px 0;
-    @media (max-width: 768px) {
-        //background: #FFFFFF;
+.gallery-opened-body {
+    .gallery-header {
         background: #F5F5F4;
-    }
-    .mobile-logo {
-        top: 100px;
-        @media (max-width: 576px) {
-            top: 60px;
+        padding: 0 0 30px 210px;
+        @media (max-width: 768px) {
+            //background: #FFFFFF;
+            background: #F5F5F4;
         }
-        @media (max-width: 768px) and (orientation: landscape) {
+        .mobile-logo {
             top: 100px;
+            @media (max-width: 576px) {
+                top: 60px;
+            }
+            @media (max-width: 768px) and (orientation: landscape) {
+                top: 100px;
+            }
+            &__icon {
+                fill: #423C3A;
+            }
         }
-        &__icon {
-            fill: #423C3A;
+        .title {
+            font-size: 36px;
+            margin: 160px 0 20px;
+            @media (min-width: 1200px) {
+                font-size: 64px;
+                line-height: 78px;
+                margin: 160px 0 20px;
+            }
         }
-    }
-    .title {
-        font-size: 36px;
-        margin: 120px 0 20px;
-        @media (min-width: 1200px) {
-            font-size: 64px;
-            line-height: 78px;
-            margin: 60px 0 20px;
-        }
-    }
-    .headline {
-        margin: 0 0 0 2px;
-        @media (min-width: 1200px) {
-            font-size: 19px;
-            line-height: 23px;
+        .headline {
+            margin: 0 0 0 2px;
+            @media (min-width: 1200px) {
+                font-size: 19px;
+                line-height: 23px;
+            }
         }
     }
 }
