--- a/app/scss/modules/_page-gallery.scss
+++ b/app/scss/modules/_page-gallery.scss
@@ -1,3 +1,36 @@
+.gallery-header {
+    padding: 0 0 40px 210px;
+    background: #F5F5F4;
+    .mobile-logo {
+        top: 100px;
+        @media (max-width: 576px) {
+            top: 60px;
+        }
+        @media (max-width: 768px) and (orientation: landscape) {
+            top: 100px;
+        }
+        &__icon {
+            fill: #423C3A;
+        }
+    }
+    .title {
+        font-size: 36px;
+        margin: 120px 0 20px;
+        @media (min-width: 1200px) {
+            font-size: 64px;
+            line-height: 78px;
+            margin: 60px 0 20px;
+        }
+    }
+    .headline {
+        margin: 0 0 0 2px;
+        @media (min-width: 1200px) {
+            font-size: 19px;
+            line-height: 23px;
+        }
+    }
+}
+
 .gallery-list {
     display: flex;
     flex-direction: column;
