--- a/app/scss/modules/_page-object.scss
+++ b/app/scss/modules/_page-object.scss
@@ -15,13 +15,14 @@
         }
     }
     .footer {
-        background: rgba(229, 229, 229, .5);
+        //background: rgba(229, 229, 229, .5);
+        background: #f5f5f4;
     }
 }
 
 .object-header {
     background: #F5F5F4;
-    padding: 0 0 30px 0;
+    padding: 0 0 30px 210px;
     @media (max-width: 768px) {
         //background: #FFFFFF;
         background: #F5F5F4;
@@ -61,7 +62,7 @@
     @media (max-width: 768px) {
         background: #FFFFFF;
     }
-    padding: 0;
+    padding: 0 0 0 210px;
     .container {
         padding: 0;
         @media (min-width: 1025px) {
