--- a/app/scss/modules/_page-object__modal.scss
+++ b/app/scss/modules/_page-object__modal.scss
@@ -36,7 +36,7 @@
             transition: all .3s;
             position: relative;
             @media (min-width: 1025px) {
-                @include size(75px);
+                @include size(65px);
             }
             &:before {
                 content: '';
@@ -124,7 +124,7 @@
         }
     }
     .information {
-        padding: 15px 0;
+        margin: 0 15px;
         @media (min-width: 1025px) {
             grid-row: 1/2;
             grid-column: 1/2;
@@ -133,32 +133,31 @@
             font-weight: bold;
             font-size: 24px;
             line-height: 29px;
-            padding: 0 25px;
+            margin: 0 25px;
             @media (min-width: 1025px) {
                 font-size: 36px;
                 line-height: 44px;
-                margin: 0 0 40px 0;
+                margin: 0 25px 40px;
+            }
+        }
+        p {
+            margin: 0 25px 15px;
+            //padding: 0 25px;
+            font-family: Bellota Text;
+            font-style: italic;
+            @media (min-width: 1025px) {
+                font-size: 19px;
+                line-height: 23px;
+                margin: 0 25px 40px;
             }
         }
     }
     .date {
-        margin: 15px 0;
-        padding: 0 25px;
+        margin: 15px 25px;
         @media (min-width: 1025px) {
             font-size: 19px;
             line-height: 23px;
-            margin: 40px 0;
-        }
-    }
-    .text {
-        margin: 15px 0;
-        padding: 0 25px;
-        font-family: Bellota Text;
-        font-style: italic;
-        @media (min-width: 1025px) {
-            font-size: 19px;
-            line-height: 23px;
-            margin: 40px 0;
+            margin: 40px 25px;
         }
     }
     .photo {
@@ -181,73 +180,35 @@
             }
         }
     }
-    .text {
-        margin: 15px 0;
-        padding: 0 25px;
-        font-family: Bellota Text;
-        font-style: italic;
-        @media (min-width: 1025px) {
-            font-size: 19px;
-            line-height: 23px;
-            margin: 40px 0;
-        }
-    }
     .price {
+        font-size: 14px;
+        line-height: 26px;
+        color: #423C3A;
+        background: #FFFFFF;
+        overflow: hidden;
+        width: 100%;
         @media (min-width: 1025px) {
             margin: 0 25px;
+            background: transparent;
         }
-    }
-}
-
-.price {
-    display: grid;
-    grid-template-columns: 40% 20% 40%;
-    grid-gap: 2px;
-    font-size: 14px;
-    line-height: 26px;
-    color: #423C3A;
-    background: #FFFFFF;
-    overflow: hidden;
-    @media (min-width: 1025px) {
-        background: transparent;
-    }
-    p {
-        margin: 0;
-        padding: 0 0 0 5px;
-        background: #FFF3A6;
-        &:nth-child(-n+3) {
+        tr {
+            display: grid;
+            grid-template-columns: 40% 20% 40%;
+            grid-gap: 2px;
+            margin: 0 0 2px;
+        }
+        th {
             font-weight: bold;
             font-size: 14px;
+            background: #FFF3A6;
+            text-align: left;
+            padding: 0 0 0 5px;
         }
-    }
-}
-
-.information {
-    padding: 15px 0;
-    @media (min-width: 1025px) {
-        grid-row: 1/2;
-        grid-column: 1/2;
-    }
-    &__headline {
-        font-weight: bold;
-        font-size: 24px;
-        line-height: 29px;
-        padding: 0 25px;
-        @media (min-width: 1025px) {
-            font-size: 36px;
-            line-height: 44px;
-            margin: 0 0 40px 0;
+        td {
+            margin: 0;
+            padding: 0 0 0 5px;
+            background: #FFF3A6;
         }
-    }
-}
-
-.date {
-    margin: 15px 0;
-    padding: 0 25px;
-    @media (min-width: 1025px) {
-        font-size: 19px;
-        line-height: 23px;
-        margin: 40px 0;
     }
 }
 
