--- a/app/scss/modules/_section-about.scss
+++ b/app/scss/modules/_section-about.scss
@@ -127,14 +127,14 @@
         }
         .arrow-btn {
             .icon {
-                left: 15px;
+                left: 13px;
                 transform: rotate(0);
-                width: 45px;
+                width: 40px;
                 @media (max-width: 576px) {
-                    left: -2px;
+                    left: 0;
                 }
                 @media (max-width: 812px) and (orientation: landscape) {
-                    left: -2px;
+                    left: 0;
                 }
             }
         }
