--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -47,7 +47,7 @@
     }
     &-slider {
         &__nextbtn {
-            @include pos($r: 50px, $t: 50%);
+            @include pos($r: 35px, $t: 50%);
             z-index: 3;
             fill: #FFF3A6;
             transform: translateX(50%) rotate(180deg);
@@ -60,7 +60,7 @@
             }
         }
         &__prevbtn {
-            @include pos($r: 50%, $t: 50%);
+            @include pos($r: 53%, $t: 50%);
             z-index: 3;
             fill: #FFF3A6;
             @media (max-width: 576px) {
@@ -72,22 +72,22 @@
             }
         }
         &__wrap {
-            @include pos($t: 100px, $l: 45%);
+            @include pos($t: 100px, $l: 50%);
             width: 55vw;
-            &:before {
-                content: '';
-                display: block;
-                @include pos($t: 0, $l: 0);
-                @include size(350px, 100%);
-                background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 21.79%);
-                z-index: 2;
-            }
+            // &:before {
+            //     content: '';
+            //     display: block;
+            //     @include pos($t: 0, $l: 0);
+            //     @include size(350px, 100%);
+            //     background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 21.79%);
+            //     z-index: 2;
+            // }
             &:after {
                 content: '';
                 display: block;
-                @include pos($t: 0, $r: 0);
-                @include size(350px, 100%);
-                transform: rotate(180deg);
+                @include pos($t: 0, $r: -130px);
+                @include size(400px, 100%);
+                transform: rotate(180deg) translateX(50%);
                 background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 21.79%);
                 z-index: 2;
             }
@@ -225,13 +225,14 @@
                 line-height: 20px;
                 width: 75%;
                 justify-self: center;
+                padding: 0 .25rem;
             }
             margin-bottom: 50px;
             text-transform: uppercase;
             font-size: 22px;
             line-height: 29px;
             text-align: center;
-            padding: 0 .25rem;
+            padding: 0 1.25rem;
             display: block;
         }
         @media (max-width: 1366px) {
@@ -263,11 +264,11 @@
             @include size(45px, 85px);
             font-size: 50px;
         }
-        fill: #423C3A;
+        //fill: #423C3A;
         cursor: pointer;
         transition: all .3s;
         &:hover {
-            fill: $bb-pressed;
+            fill: #828282;
         }
     }
 }
