--- a/app/scss/modules/_section-objects.scss
+++ b/app/scss/modules/_section-objects.scss
@@ -7,6 +7,12 @@
     .container {
         position: relative;
     }
+    &__title {
+        position: relative;
+        .grid {
+            @include pos($t: 0, $l: 0);
+        }
+    }
     .headline {
         line-height: 37px;
         border-color: #FFFFFF;
@@ -44,7 +50,7 @@
         color: $link-default;
         font-size: 36px;
         line-height: 44px;
-        margin: 0 0 45px 0;
+        margin: 285px 0 30px 0;
         grid-column: 1/7;
         grid-row: 3/4;
         @media (max-width: 576px) {
@@ -55,9 +61,10 @@
         }
     }
     &-tile__text {
+        height: 155px;
         font-weight: 300;
-        font-size: 1.3;
-        line-height: 30px;
+        font-size: 20px;
+        line-height: 24px;
         margin: 0 0 50px 0;
         grid-column: 1/7;
         grid-row: 4/5;
@@ -105,7 +112,7 @@
     }
     &-tile__icons {
         display: flex;
-        padding: 1rem 1rem 2rem 1rem;
+        //padding: 1rem 1rem 2rem 1rem;
         @media (max-width: 576px) {
             padding: 0 .5rem;
         }
@@ -117,11 +124,12 @@
         align-items: center;
         justify-content: space-between;
         font-size: 19px;
-        padding: 1rem 0;
+        padding: 28px 30px;
         width: 33%;
         text-align: center;
         &-text {
-            line-height: 2rem;
+            //line-height: 2rem;
+            margin: 0 0 12px;
             @media (max-width: 576px) {
                 font-size: 16px;
                 line-height: 20px;
